log/build_2026-03-31_10-22-54/estimation/stdout_stderr.log
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.2")  
-- Found FastRTPS: /opt/ros/humble/include  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found geometry_msgs: 4.9.1 (/opt/ros/humble/share/geometry_msgs/cmake)
-- Found interfaces: 0.0.0 (/home/lzh/VMC_Quadruped/install/interfaces/share/interfaces/cmake)
-- Found ament_lint_auto: 0.12.15 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/lzh/VMC_Quadruped/src/estimation/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/lzh/VMC_Quadruped/build/estimation
[ 20%] Building CXX object CMakeFiles/estimation_kinematics.dir/src/leg_kinematics.cpp.o
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Matrix3d estimation::LegKinematics::computeInertiaMatrix(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:8:21: error: ‘LegConstants’ is not a namespace-name
    8 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:10:17: error: ‘L_THIGH’ was not declared in this scope
   10 |     double l1 = L_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:11:17: error: ‘L_CALF’ was not declared in this scope; did you mean ‘LC_ALL’?
   11 |     double l2 = L_CALF;
      |                 ^~~~~~
      |                 LC_ALL
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:12:17: error: ‘M_THIGH’ was not declared in this scope
   12 |     double m1 = M_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:13:17: error: ‘M_CALF’ was not declared in this scope
   13 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:14:18: error: ‘THIGH_COM’ was not declared in this scope
   14 |     double l1c = THIGH_COM;  // 0.5 * L_THIGH
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:15:18: error: ‘CALF_COM’ was not declared in this scope
   15 |     double l2c = CALF_COM;    // 0.5 * L_CALF
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:20:20: error: ‘I_THIGH_XX’ was not declared in this scope
   20 |     double I1_xx = I_THIGH_XX;
      |                    ^~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:21:20: error: ‘I_THIGH_ZZ’ was not declared in this scope
   21 |     double I1_zz = I_THIGH_ZZ;
      |                    ^~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:22:20: error: ‘I_CALF_XX’ was not declared in this scope
   22 |     double I2_xx = I_CALF_XX;
      |                    ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:23:20: error: ‘I_CALF_ZZ’ was not declared in this scope
   23 |     double I2_zz = I_CALF_ZZ;
      |                    ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:10:12: warning: unused variable ‘l1’ [-Wunused-variable]
   10 |     double l1 = L_THIGH;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:11:12: warning: unused variable ‘l2’ [-Wunused-variable]
   11 |     double l2 = L_CALF;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:18:12: warning: unused variable ‘s12’ [-Wunused-variable]
   18 |     double s12 = std::sin(q(1) + q(2));  // sin(thigh + calf)
      |            ^~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeCoriolisTerm(const Vector3d&, const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:48:21: error: ‘LegConstants’ is not a namespace-name
   48 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:50:18: error: ‘THIGH_COM’ was not declared in this scope
   50 |     double l1c = THIGH_COM;
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:51:18: error: ‘CALF_COM’ was not declared in this scope
   51 |     double l2c = CALF_COM;
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:52:17: error: ‘M_CALF’ was not declared in this scope
   52 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:55:12: warning: unused variable ‘c2’ [-Wunused-variable]
   55 |     double c2 = std::cos(q(1));
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeGravityTerm(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:75:21: error: ‘LegConstants’ is not a namespace-name
   75 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:77:17: error: ‘M_THIGH’ was not declared in this scope
   77 |     double m1 = M_THIGH;
      |                 ^~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:78:17: error: ‘M_CALF’ was not declared in this scope
   78 |     double m2 = M_CALF;
      |                 ^~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:79:18: error: ‘THIGH_COM’ was not declared in this scope
   79 |     double l1c = THIGH_COM;
      |                  ^~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:80:18: error: ‘CALF_COM’ was not declared in this scope
   80 |     double l2c = CALF_COM;
      |                  ^~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:81:16: error: ‘G’ was not declared in this scope
   81 |     double g = G;
      |                ^
gmake[2]: *** [CMakeFiles/estimation_kinematics.dir/build.make:76：CMakeFiles/estimation_kinematics.dir/src/leg_kinematics.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:139：CMakeFiles/estimation_kinematics.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
